Update FCharacter component

--- a/src/test/resources/org/flywind/widgets/test/pages/FAjaxUploadTest.tml
+++ b/src/test/resources/org/flywind/widgets/test/pages/FAjaxUploadTest.tml
@@ -87,6 +87,7 @@
       <td>${message:desc8}</td>
     </tr>
   </tbody>
+  <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
 </table>
 			<w:fajaxUpload t:id="uploadImage" t:multiple="true"
 				t:allowedExtensions="[jpg, png, gif]" t:sizeLimit="1M">
