--- a/src/test/resources/org/flywind/widgets/test/pages/FDatagridTest.tml
+++ b/src/test/resources/org/flywind/widgets/test/pages/FDatagridTest.tml
@@ -1,16 +1,17 @@
 <html xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd"
       xmlns:p="tapestry:parameter">
-<h3>FDatagrid组件,该组件来源jquery easyui datagrid组件<a href="http://www.jeasyui.net/plugins/183.html" target="_blank">官方文档</a>,组件参数如下:</h3>
+<h3>${message:compoment-desc}</h3>
+<h4>FDatagrid params:</h4>
 <table class="tapestry-tab" border="0">
   <thead>
     <tr>
-      <th>名称</th>
-      <th>类型</th>
-      <th>标志</th>
-      <th>默认</th>
-      <th>默认前缀</th>
-      <th>此版本开始</th>
-      <th>描述</th>
+      <th>${message:grid-name}</th>
+      <th>${message:grid-type}</th>
+      <th>${message:grid-symbol}</th>
+      <th>${message:grid-default}</th>
+      <th>${message:grid-default-prefix}</th>
+      <th>${message:grid-since}</th>
+      <th>${message:grid-desc}</th>
     </tr>
   </thead>
   <tbody>
@@ -21,16 +22,16 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>组件的t:id,用来实例化组件与被FDatagridBtn组件调用</td>
+      <td>${message:desc1}</td>
     </tr>
     <tr>
       <td>params</td>
       <td>JSONObject</td>
       <td></td>
-      <td>{'method':'POST','width':'auto','fit':true,'fitColumns':false,'pagination':true,'rownumbers':true,'loadMsg':messages.get("loading-data"),'remoteSort':false,'pageSize':10,'striped':true,'nowrap':true,'singleSelect':true,'zhCn':true}</td>
+      <td>{'method':'POST','width':'auto','fit':true,'fitColumns':false,'pagination':true,'rownumbers':true,'loadMsg':messages.get("loading-data"),'remoteSort':false,'pageSize':10,'striped':true,'nowrap':true,'singleSelect':true,'language':'zh-cn','fixLayout':false}</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>griddata的默认参数,可以重新修改,更详细的参数说明请参考官方文档</td>
+      <td>${message:desc2}</td>
     </tr>
     <tr>
       <td>singleSelect</td>
@@ -39,7 +40,7 @@
       <td>true</td>
       <td></td>
       <td>1.0</td>
-      <td>singleSelect:datagrid的单选模式,默认为true</td>
+      <td>${message:desc3}</td>
     </tr>
     <tr>
       <td>source</td>
@@ -48,21 +49,22 @@
       <td></td>
       <td></td>
       <td>1.0</td>
-      <td>source代表数据源,必须是java list</td>
+      <td>${message:desc4}</td>
     </tr>
   </tbody>
+  <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
 </table>
-<h3>FDatagridBtn组件,用来操作datagrid组件的添加、删除、更新.参数如下:</h3>
+<h4>FDatagridBtn params:</h4>
 <table class="tapestry-tab" border="0">
   <thead>
     <tr>
-      <th>名称</th>
-      <th>类型</th>
-      <th>标志</th>
-      <th>默认</th>
-      <th>默认前缀</th>
-      <th>此版本开始</th>
-      <th>描述</th>
+      <th>${message:grid-name}</th>
+      <th>${message:grid-type}</th>
+      <th>${message:grid-symbol}</th>
+      <th>${message:grid-default}</th>
+      <th>${message:grid-default-prefix}</th>
+      <th>${message:grid-since}</th>
+      <th>${message:grid-desc}</th>
     </tr>
   </thead>
   <tbody>
@@ -73,7 +75,7 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>用来区分组件的id</td>
+      <td>${message:desc5}</td>
     </tr>
     <tr>
       <td>text</td>
@@ -82,7 +84,7 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>按钮的value的值</td>
+      <td>${message:desc6}</td>
     </tr>
     <tr>
       <td>url</td>
@@ -91,7 +93,7 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>请求的地url址</td>
+      <td>${message:desc7}</td>
     </tr>
     <tr>
       <td>gridId</td>
@@ -100,7 +102,7 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>按钮点击之后去获取gridId的值对应的datagrid的id的数据</td>
+      <td>${message:desc8}</td>
     </tr>
     <tr>
       <td>cls</td>
@@ -109,7 +111,7 @@
       <td>btn</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>按钮样式(class)名</td>
+      <td>${message:desc9}</td>
     </tr>
     <tr>
       <td>itemcls</td>
@@ -118,7 +120,7 @@
       <td>fa</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>按钮图标样式(class)名</td>
+      <td>${message:desc10}</td>
     </tr>
     <tr>
       <td>clientEvent</td>
@@ -127,7 +129,7 @@
       <td>click</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>按钮的事件默认是click事件,不建议进行修改,绝大多数是点击进行触发事件.</td>
+      <td>${message:desc11}</td>
     </tr>
     <tr>
       <td>linkType</td>
@@ -136,7 +138,7 @@
       <td>event</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>按钮的类型,包含event:事件如点击按钮执行删除这个事件,在当前页面执行.page:执行页面跳转,如点击编辑按钮跳转到编辑页面,跳转转过程组件自动传递id的值.</td>
+      <td>${message:desc12}</td>
     </tr>
     <tr>
       <td>zone</td>
@@ -145,7 +147,7 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>当linkType为event时.进行ajax的请求回调的zone名称.</td>
+      <td>${message:desc13}</td>
     </tr>
     <tr>
       <td>alertMsg</td>
@@ -154,7 +156,7 @@
       <td>请选择至少一条记录(中文),Please select at least one record(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>alertMsg:无选择datagrid时,警告框的内容</td>
+      <td>${message:desc14}</td>
     </tr>
     <tr>
       <td>alertTitle</td>
@@ -163,7 +165,7 @@
       <td>温馨提示(中文),Tips(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>alertTitle:无选择datagrid时,警告框的标题</td>
+      <td>${message:desc15}</td>
     </tr>
     <tr>
       <td>confirmTitle</td>
@@ -172,7 +174,7 @@
       <td>确认信息(中文),Confirmation(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>confirmTitle:确认框的标题</td>
+      <td>${message:desc16}</td>
     </tr>
     <tr>
       <td>confirmMsg</td>
@@ -181,7 +183,7 @@
       <td>您确定吗?(中文),Are you sure?(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>confirmMsg:确认框的内容</td>
+      <td>${message:desc17}</td>
     </tr>
     <tr>
       <td>submitMsg</td>
@@ -190,7 +192,7 @@
       <td>确认(中文),Ok(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>submitMsg:确认框按钮的文字</td>
+      <td>${message:desc18}</td>
     </tr>
     <tr>
       <td>cancelMsg</td>
@@ -199,21 +201,22 @@
       <td>取消(中文),Cancel(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>cancelMsg:确认框取消按钮的文字</td>
+      <td>${message:desc19}</td>
     </tr>
   </tbody>
+  <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
 </table>
 <h3>FDialogGridLink</h3>
 <table class="tapestry-tab" border="0">
   <thead>
     <tr>
-      <th>名称</th>
-      <th>类型</th>
-      <th>标志</th>
-      <th>默认</th>
-      <th>默认前缀</th>
-      <th>此版本开始</th>
-      <th>描述</th>
+      <th>${message:grid-name}</th>
+      <th>${message:grid-type}</th>
+      <th>${message:grid-symbol}</th>
+      <th>${message:grid-default}</th>
+      <th>${message:grid-default-prefix}</th>
+      <th>${message:grid-since}</th>
+      <th>${message:grid-desc}</th>
     </tr>
   </thead>
   <tbody>
@@ -353,33 +356,34 @@
       <td>cancelMsg:确认框取消按钮的文字</td>
     </tr>
   </tbody>
+  <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
 </table>
 <form class="form-inline" t:type="form" role="form" t:zone="zoneOne" t:autofocus="false">
 			<div class="form-group">
-				<label class="control-label">用户名<span class="mr5">:</span></label>
-				<input class="iw120 form-control" type="text" placeholder="输入用户名" t:type="textfield" t:id="userName"/>
+				<label class="control-label">User name<span class="mr5">:</span></label>
+				<input class="iw120 form-control" type="text" placeholder="Input something" t:type="textfield" t:id="userName"/>
 			</div>
 			<div class="form-group">
-				<button class="btn btn-block btn-info btn-flat">搜索</button>
+				<button class="btn btn-block btn-info btn-flat">Search</button>
 			</div>
 </form>
 <div class="btn-box">
 	         <div class="btn-group mr10">
-	           <t:widgets.fdatagridbtn t:clientId="edit" linkType="page" text="编辑" url="FDatagridModeTest" gridId="newContracts"/>
+	           <t:widgets.fdatagridbtn t:clientId="edit" linkType="page" text="Edit data" url="FDatagridModeTest" gridId="newContracts"/>
 	         </div>
 	         <div class="btn-group mr10">
-	           <t:widgets.fdatagridbtn t:clientId="edit5" linkType="page" paramsMode="true" text="编辑" url="FDatagridTest4" gridId="newContracts"/>
+	           <t:widgets.fdatagridbtn t:clientId="edit5" linkType="page" paramsMode="true" text="Edit data again" url="FDatagridTest4" gridId="newContracts"/>
 	         </div>
 	         <div class="btn-group mr10">
-	         	<t:widgets.fdatagridbtn t:clientId="delete" zone="zoneOne"  text="删除" url="${delUrl}" alertMsg="没有选择" gridId="newContracts" />
+	         	<t:widgets.fdatagridbtn t:clientId="delete" zone="zoneOne"  text="Delete data" url="${delUrl}" alertMsg="No data selected" gridId="newContracts" />
 	         </div>
 </div>
 <t:zone t:id="zoneOne" id="zoneOne" style="height:500px">
 <table t:type="widgets/fdatagrid" t:id="newContracts" t:source="examples" t:pageSize="20">
 	<thead>
 		<tr>
-			<th data-options="field:'id',width:80,title:'编号',sortable:true"></th>
-			<th data-options='field:"creater",width:300,title:"创建者",
+			<th data-options="field:'id',width:80,title:'ID',sortable:true"></th>
+			<th data-options='field:"creater",width:300,title:"Creater name",
 							  formatter:function(value,row){
 							  	if(row.creater == "kitty"){
 							  		
@@ -388,39 +392,27 @@
 							  		return row.creater+" world";
 							  	}
 							  }'></th>
-		    <th data-options="field:'customerCode',width:80,title:'客户代码'"></th>
+		    <th data-options="field:'customerCode',width:80,title:'Customer code'"></th>
 		    <th data-options="field:'userName',width:80,title:'${message:userName-label}'"></th>
-		    <th data-options="field:'createTime',width:150,title:'创建时间'"></th>
-		    <th data-options="field:'lastUpdateTime',width:150,title:'更新时间'"></th>
-		    <th data-options="field:'lastUpdatePerson',width:80,title:'更新人'"></th>
+		    <th data-options="field:'createTime',width:150,title:'Create time'"></th>
+		    <th data-options="field:'lastUpdateTime',width:150,title:'Updata time'"></th>
+		    <th data-options="field:'lastUpdatePerson',width:80,title:'Updata person'"></th>
 		</tr>
 	</thead>
 </table>
 </t:zone>
 <div class="btn-box">
-	<div class="btn-group mr10"><t:widgets.fdatagridbtn t:clientId="editT" linkType="page"  text="编辑" url="FDatagridTest2" gridId="newContracts2"/></div>
-	<div class="btn-group mr10"><t:widgets.fdatagridbtn t:clientId="deleteT" zone="zoneTwo"  text="删除" url="${deleteUrl}" alertMsg="没有选择任何数据" gridId="newContracts2" /></div>
-	<div class="btn-group mr10"><t:widgets.FDialogGridLink t:clientId="editTwo333" zone="zoneTwo" text="dialog查询" url="${deleteUrl}" dialog="medialog" gridId="newContracts2"/></div>
+	<div class="btn-group mr10"><t:widgets.fdatagridbtn t:clientId="editT" linkType="page"  text="Delete go ..." url="FDatagridTest2" gridId="newContracts2"/></div>
+	<div class="btn-group mr10"><t:widgets.fdatagridbtn t:clientId="deleteT" zone="zoneTwo"  text="Delete again" url="${deleteUrl}" alertMsg="No data selected" gridId="newContracts2" /></div>
 </div>
 <t:zone t:id="zoneTwo" id="zoneTwo" style="height:500px;">
 <table t:type="widgets/fdatagrid" t:id="newContracts2" t:source="examples">
 	<thead>
 		<tr>
-			<th data-options="field:'userName',width:80,title:'用户名',sortable:true"></th>
-			<th data-options="field:'creater',width:80,title:'创建者'"></th>
+			<th data-options="field:'userName',width:80,title:'User name',sortable:true"></th>
+			<th data-options="field:'creater',width:80,title:'Create name'"></th>
 		</tr>
 	</thead>
 </table>
 </t:zone>
-<t:widgets.fdialog t:clientId="medialog" t:params="{'width':1000,'height':400}">
-	<table t:type="widgets/fdatagrid" t:id="newContracts3" t:source="examples" t:params="{'singleSelect':false,'checkOnSelect':true,'selectOnCheck':true}" t:singleSelect="false">
-		<thead>
-			<tr>
-				<th data-options="field:'ck','checkbox':true"></th>
-				<th data-options="field:'userName',width:80,title:'用户名'"></th>
-				<th data-options="field:'creater',width:80,title:'创建者'"></th>
-			</tr>
-		</thead>
-	</table>
-</t:widgets.fdialog>
 </html>
