--- a/src/test/resources/org/flywind/widgets/test/pages/FPaginateTest.tml
+++ b/src/test/resources/org/flywind/widgets/test/pages/FPaginateTest.tml
@@ -1,16 +1,16 @@
 <html xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd"
       xmlns:p="tapestry:parameter">
-<h3>FPaginate分页组件</h3>
+<h3>${message:compoment-desc}</h3>
 <table class="tapestry-tab" border="0">
   <thead>
     <tr>
-      <th>名称</th>
-      <th>类型</th>
-      <th>标志</th>
-      <th>默认</th>
-      <th>默认前缀</th>
-      <th>此版本开始</th>
-      <th>描述</th>
+      <th>${message:grid-name}</th>
+      <th>${message:grid-type}</th>
+      <th>${message:grid-symbol}</th>
+      <th>${message:grid-default}</th>
+      <th>${message:grid-default-prefix}</th>
+      <th>${message:grid-since}</th>
+      <th>${message:grid-desc}</th>
     </tr>
   </thead>
   <tbody>
@@ -21,7 +21,7 @@
       <td></td>
       <td></td>
       <td>1.0</td>
-      <td>source:分页的数据源</td>
+      <td>${message:desc1}</td>
     </tr>
     <tr>
       <td>size</td>
@@ -30,7 +30,7 @@
       <td>normal</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>size:分页的尺寸,默认:normal,类型有:large,small,mini</td>
+      <td>${message:desc2}</td>
     </tr>
     <tr>
       <td>pageSize</td>
@@ -39,7 +39,7 @@
       <td>5</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>pageSize:当前页显示的记录数</td>
+      <td>${message:desc3}</td>
     </tr>
     <tr>
       <td>queryParams</td>
@@ -48,7 +48,7 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>queryParams:查询的参数,字段之间用英文逗号隔开</td>
+      <td>${message:desc4}</td>
     </tr>
     <tr>
       <td>zone</td>
@@ -57,26 +57,27 @@
       <td></td>
       <td>literal</td>
       <td>1.0</td>
-      <td>zone:分页数据展示到ajax的zone区域</td>
+      <td>${message:desc5}</td>
     </tr>
   </tbody>
+  <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
 </table>
 <t:form t:id="createForm" t:zone="formZone" autofocus="false" class="form-horizontal" style="width:800px;">
 <div class="form-group">
-	<label class="col-sm-2 control-label">用户名:</label>
+	<label class="col-sm-2 control-label">User name</label>
 	<div class="col-sm-10">
 		<input class="form-control sm-w300" type="text" t:type="textfield" t:id="userName" value="example.userName" t:validate="required"/>
 	</div>
 </div>
 <div class="form-group">
-	<label class="col-sm-2 control-label">创建人:</label>
+	<label class="col-sm-2 control-label">Creater</label>
 	<div class="col-sm-10">
 		<input class="form-control sm-w300" type="text" t:type="textfield" t:id="creater" value="example.creater"/>
 	</div>
 </div>
 <div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button class="btn btn-info btn-flat mr10">搜索</button>
+			<button class="btn btn-info btn-flat mr10">Search</button>
 		</div>
 	</div>
 </t:form>
@@ -85,11 +86,11 @@
 <table class="table">
 	<thead>
     <tr>
-    	<th>编号</th>
-    	<th>用户名</th>
-    	<th>创建人</th>
-    	<th>客户代码</th>
-    	<th>最后更新时间</th>
+    	<th>ID</th>
+    	<th>User name</th>
+    	<th>Creater</th>
+    	<th>Customer code</th>
+    	<th>Last update time</th>
     </tr>
     </thead>
     <tbody>
@@ -103,7 +104,7 @@
     	</tr>
     	<t:block t:id="emptyBlock">
     	<tr>
-    		<td colspan="5">无数据</td>
+    		<td colspan="5">no data</td>
     	</tr>
     	</t:block>
     	</t:loop>
