--- a/src/test/resources/org/flywind/widgets/test/pages/FDatagridTest.tml
+++ b/src/test/resources/org/flywind/widgets/test/pages/FDatagridTest.tml
@@ -206,158 +206,7 @@
   </tbody>
   <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
 </table>
-<h3>FDialogGridLink</h3>
-<table class="tapestry-tab" border="0">
-  <thead>
-    <tr>
-      <th>${message:grid-name}</th>
-      <th>${message:grid-type}</th>
-      <th>${message:grid-symbol}</th>
-      <th>${message:grid-default}</th>
-      <th>${message:grid-default-prefix}</th>
-      <th>${message:grid-since}</th>
-      <th>${message:grid-desc}</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>clientId</td>
-      <td>String</td>
-      <td>Required,Not Null</td>
-      <td></td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>用来区分组件的id</td>
-    </tr>
-    <tr>
-      <td>text</td>
-      <td>String</td>
-      <td>Required,Not Null</td>
-      <td></td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>按钮的value的值</td>
-    </tr>
-    <tr>
-      <td>url</td>
-      <td>String</td>
-      <td>Required,Not Null</td>
-      <td></td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>请求的地url址</td>
-    </tr>
-    <tr>
-      <td>gridId</td>
-      <td>String</td>
-      <td>Required,Not Null</td>
-      <td></td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>按钮点击之后去获取gridId的值对应的datagrid的id的数据</td>
-    </tr>
-    <tr>
-      <td>cls</td>
-      <td>String</td>
-      <td></td>
-      <td>btn</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>按钮样式(class)名</td>
-    </tr>
-    <tr>
-      <td>itemcls</td>
-      <td>String</td>
-      <td></td>
-      <td>fa</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>按钮图标样式(class)名</td>
-    </tr>
-    <tr>
-      <td>clientEvent</td>
-      <td>String</td>
-      <td></td>
-      <td>click</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>按钮的事件默认是click事件,不建议进行修改,绝大多数是点击进行触发事件.</td>
-    </tr>
-    <tr>
-      <td>linkType</td>
-      <td>String</td>
-      <td></td>
-      <td>event</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>按钮的类型,包含event:事件如点击按钮执行删除这个事件,在当前页面执行.page:执行页面跳转,如点击编辑按钮跳转到编辑页面,跳转转过程组件自动传递id的值.</td>
-    </tr>
-    <tr>
-      <td>zone</td>
-      <td>String</td>
-      <td></td>
-      <td></td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>当linkType为event时.进行ajax的请求回调的zone名称.</td>
-    </tr>
-    <tr>
-      <td>alertMsg</td>
-      <td>String</td>
-      <td></td>
-      <td>请选择至少一条记录(中文),Please select at least one record(英文)</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>alertMsg:无选择datagrid时,警告框的内容</td>
-    </tr>
-    <tr>
-      <td>alertTitle</td>
-      <td>String</td>
-      <td></td>
-      <td>温馨提示(中文),Tips(英文)</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>alertTitle:无选择datagrid时,警告框的标题</td>
-    </tr>
-    <tr>
-      <td>confirmTitle</td>
-      <td>String</td>
-      <td></td>
-      <td>确认信息(中文),Confirmation(英文)</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>confirmTitle:确认框的标题</td>
-    </tr>
-    <tr>
-      <td>confirmMsg</td>
-      <td>String</td>
-      <td></td>
-      <td>您确定吗?(中文),Are you sure?(英文)</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>confirmMsg:确认框的内容</td>
-    </tr>
-    <tr>
-      <td>submitMsg</td>
-      <td>String</td>
-      <td></td>
-      <td>确认(中文),Ok(英文)</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>submitMsg:确认框按钮的文字</td>
-    </tr>
-    <tr>
-      <td>cancelMsg</td>
-      <td>String</td>
-      <td></td>
-      <td>取消(中文),Cancel(英文)</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>cancelMsg:确认框取消按钮的文字</td>
-    </tr>
-  </tbody>
-  <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
-</table>
+
 <form class="form-inline" t:type="form" role="form" t:zone="zoneOne" t:autofocus="false">
 			<div class="form-group">
 				<label class="control-label">User name<span class="mr5">:</span></label>
@@ -379,7 +228,7 @@
 	         </div>
 </div>
 <t:zone t:id="zoneOne" id="zoneOne" style="height:500px">
-<table t:type="widgets/fdatagrid" t:id="newContracts" t:source="examples" t:pageSize="20">
+<table t:type="widgets/fdatagrid" t:id="newContracts" t:source="examples" t:params="{'language':'en'}" t:pageSize="20">
 	<thead>
 		<tr>
 			<th data-options="field:'id',width:80,title:'ID',sortable:true"></th>
