--- a/src/test/resources/org/flywind/widgets/test/pages/FConfirmTest.tml
+++ b/src/test/resources/org/flywind/widgets/test/pages/FConfirmTest.tml
@@ -1,16 +1,16 @@
 <html xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd"
       xmlns:p="tapestry:parameter">
-<h3>FConfirm组件 ,确定框组件，当删除一些重要数据的时候可以提示用户是否确定删除.</h3>
+<h3>${message:compoment-desc}</h3>
 <table class="tapestry-tab" border="0">
   <thead>
     <tr>
-      <th>名称</th>
-      <th>类型</th>
-      <th>标志</th>
-      <th>默认</th>
-      <th>默认前缀</th>
-      <th>此版本开始</th>
-      <th>描述</th>
+      <th>${message:grid-name}</th>
+      <th>${message:grid-type}</th>
+      <th>${message:grid-symbol}</th>
+      <th>${message:grid-default}</th>
+      <th>${message:grid-default-prefix}</th>
+      <th>${message:grid-since}</th>
+      <th>${message:grid-desc}</th>
     </tr>
   </thead>
   <tbody>
@@ -21,7 +21,7 @@
       <td>您确定吗?(中文),Are you sure?(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>message代表框内的信息</td>
+      <td>${message:desc1}</td>
     </tr>
     <tr>
       <td>title</td>
@@ -30,7 +30,7 @@
       <td>确认信息(中文),Confirmation(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>title代表框内的标题</td>
+      <td>${message:desc2}</td>
     </tr>
     <tr>
       <td>validationMsg</td>
@@ -39,7 +39,7 @@
       <td>确定(中文),ok(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>validationMsg确定按钮的文字</td>
+      <td>${message:desc3}</td>
     </tr>
     <tr>
       <td>cancelMsg</td>
@@ -48,53 +48,26 @@
       <td>取消(中文),Cancel(英文)</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>cancelMsg取消按钮的文字</td>
+      <td>${message:desc4}</td>
     </tr>
     <tr>
-      <td>height</td>
+      <td>padding</td>
       <td>int</td>
       <td></td>
       <td>180</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>height确认框高度</td>
+      <td>${message:desc5}</td>
     </tr>
     <tr>
-      <td>width</td>
-      <td>int</td>
-      <td></td>
-      <td>250</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>width确认框宽度</td>
-    </tr>
-    <tr>
-      <td>isModal</td>
+      <td>lock</td>
       <td>boolean</td>
       <td></td>
       <td>true</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>isModal:是否显示弹出层背景遮罩</td>
-    </tr>
-    <tr>
-      <td>isResizable</td>
-      <td>boolean</td>
-      <td></td>
-      <td>false</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>isResizable:弹出层是否可以重置大小</td>
-    </tr>
-    <tr>
-      <td>isDraggable</td>
-      <td>boolean</td>
-      <td></td>
-      <td>true</td>
-      <td>literal</td>
-      <td>1.0</td>
-      <td>isDraggable:弹出层是否可以拖动</td>
-    </tr>
+      <td>${message:desc6}</td>
+    </tr> 
     <tr>
       <td>useDefaultConfirm</td>
       <td>boolean</td>
@@ -102,10 +75,11 @@
       <td>false</td>
       <td>literal</td>
       <td>1.0</td>
-      <td>useDefaultConfirm:是否使用浏览器确定框</td>
+      <td>${message:desc7}</td>
     </tr>
   </tbody>
+  <tfoot><tr><td colspan="7">${message:grid-info}</td></tr></tfoot>
 </table>
-<t:actionlink t:id="del" t:zone="meZone" t:context="1" t:mixins="widgets/FConfirm" FConfirm.isModal="false">delete</t:actionlink>
+<t:actionlink t:id="del" t:zone="meZone" t:context="1" t:mixins="widgets/FConfirm" FConfirm.padding="20px 150px" FConfirm.lock="true" FConfirm.useDefaultConfirm="false">delete</t:actionlink>
 <t:zone t:id="meZone" id="meZone">${count}</t:zone>
 </html>
