--- a/src/main/resources/META-INF/assets/plugins/paginate/bootstrap-paginate.css
+++ b/src/main/resources/META-INF/assets/plugins/paginate/bootstrap-paginate.css
@@ -64,23 +64,29 @@
 .pagination ul > li > a,
 .pagination ul > li > span {
   float: left;
-  padding: 4px 12px;
+  padding: 6px 12px;
   line-height: 20px;
   text-decoration: none;
   background-color: #ffffff;
   border: 1px solid #dddddd;
+  border-left: none;
+  color: #758697;
 }
-
 .pagination ul > li > a:hover,
-.pagination ul > li > a:focus,
-.pagination ul > .active > a,
-.pagination ul > .active > span {
-  background-color: #f5f5f5;
+.pagination ul > li > a:focus{
+	border: 1px solid #00bcd4;
+	color: #00bcd4;
 }
 
 .pagination ul > .active > a,
 .pagination ul > .active > span {
-  color: #999999;
+  background-color: #00bcd4;
+  border: 1px solid #00bcd4;
+}
+
+.pagination ul > .active > a,
+.pagination ul > .active > span {
+  color: #fff;
   cursor: default;
 }
 
@@ -96,22 +102,22 @@
 .pagination ul > li:first-child > a,
 .pagination ul > li:first-child > span {
   border-left-width: 1px;
-  -webkit-border-bottom-left-radius: 4px;
+  /* -webkit-border-bottom-left-radius: 4px;
           border-bottom-left-radius: 4px;
   -webkit-border-top-left-radius: 4px;
           border-top-left-radius: 4px;
   -moz-border-radius-bottomleft: 4px;
-  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-topleft: 4px; */
 }
 
 .pagination ul > li:last-child > a,
 .pagination ul > li:last-child > span {
-  -webkit-border-top-right-radius: 4px;
+  /* -webkit-border-top-right-radius: 4px;
           border-top-right-radius: 4px;
   -webkit-border-bottom-right-radius: 4px;
           border-bottom-right-radius: 4px;
   -moz-border-radius-topright: 4px;
-  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomright: 4px; */
 }
 
 .pagination-centered {
