--- a/src/main/resources/META-INF/assets/plugins/paginate/bootstrap-paginate.css
+++ b/src/main/resources/META-INF/assets/plugins/paginate/bootstrap-paginate.css
@@ -74,7 +74,7 @@
 }
 .pagination ul > li > a:hover,
 .pagination ul > li > a:focus{
-	border: 1px solid #00bcd4;
+	/* border: 1px solid #00bcd4; */
 	color: #00bcd4;
 }
 
@@ -89,7 +89,10 @@
   color: #fff;
   cursor: default;
 }
-
+.pagination ul > li.active > a:hover,
+.pagination ul > li.active > a:focus{
+	color:#fff;
+}
 .pagination ul > .disabled > span,
 .pagination ul > .disabled > a,
 .pagination ul > .disabled > a:hover,
@@ -101,7 +104,7 @@
 
 .pagination ul > li:first-child > a,
 .pagination ul > li:first-child > span {
-  border-left-width: 1px;
+  border-left: 1px solid #ddd;
   /* -webkit-border-bottom-left-radius: 4px;
           border-bottom-left-radius: 4px;
   -webkit-border-top-left-radius: 4px;
